--- a/PC/templates/index.html
+++ b/PC/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>SSE Example</title>
+    <title>Panel Sterowania</title>
   </head>
   <body>
     <h1 id="header">0</h1>
