--- a/PC/templates/sterowanie.html
+++ b/PC/templates/sterowanie.html
@@ -18,7 +18,10 @@
     </div>
     <div id="content">
       <h1>Sterowanie</h1>
-        <button></button>
+        
+        <div id="joystick"></div>
+        
+        
     </div>
 </body>
 </html>
