--- a/PC/templates/index.html
+++ b/PC/templates/index.html
@@ -4,18 +4,24 @@
     <title>Panel sterowania</title>
     <link rel="stylesheet" type="text/css" href="../static/style.css" />
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="sidebar">
-        <ul>
-            <li><a href="{{ url_for('index') }}">Strona główna (stan)</a></li>
-            <li><a href="{{ url_for('kamery') }}">Kamery</a></li>
-            <li><a href="{{ url_for('czujnik') }}">Czujniki</a></li>
-            <li><a href="{{ url_for('sterowanie') }}">Sterowanie</a></li>
-            <li><a href="{{ url_for('lokalizacja') }}">Lokalizacja i autonomia</a></li>
-            <li><a href="{{ url_for('ustawienia') }}">Ustawienia</a></li>
-        </ul>
+    <div id="sidebar-left" class="sidebar">
+      <ul>
+          <a href="{{ url_for('index') }}"><li><img src="../static/icons/home.png" class="icons"/><span class="sidebar-text">Main</span></li></a>
+          <a href="{{ url_for('sterowanie') }}"><li><img src="../static/icons/robotic-arm.png" class="icons"/><span class="sidebar-text">Sterowanie</span></li></a>
+          <a href="{{ url_for('lokalizacja') }}"><li><img src="../static/icons/map.png" class="icons"/><span class="sidebar-text">Mapa i autonomia</span></li></a>
+          <a href="{{ url_for('czujnik') }}"><li><img src="../static/icons/search.png" class="icons"/><span class="sidebar-text">Czujniki</span></li></a>
+          <a href="{{ url_for('kamery') }}"><li><img src="../static/icons/video-camera.png" class="icons"/><span class="sidebar-text">Kamery</span></li></a>
+          <a href="{{ url_for('science') }}"><li><img src="../static/icons/atom.png" class="icons"/><span class="sidebar-text">Science</span></li></a>
+          <a href="{{ url_for('ustawienia') }}"><li><img src="../static/icons/settings.png" class="icons"/><span class="sidebar-text">Ustawienia</span></li></a>
+      </ul>
     </div>
+
+
     <div id="content">
       <img id="image" src="" alt="Obraz z serwera">
       <script>
@@ -57,8 +63,14 @@
           header.innerHTML = event.data;
         };
 
-    </script>
+      </script>
     </div>
+
+    <div id="sidebar-right" class="sidebar">
+      <div class="sidebar-header">BATTERY 98% <br> CONNECTION <img src="../static/icons/yes.png" class="connection-icon"/></div>
+      <div><a>komunikat</a></div>
+      <div class="sidebar-footer"><button class="off"><img src="../static/icons/power-on.png" class="off-image"/></button></div>
+  </div>
 </body>
 </html>
 
