--- a/PC/static/style.css
+++ b/PC/static/style.css
@@ -102,7 +102,7 @@ li:hover {
     width: 30px;
 }
 
-.connection-icon {
+#connection-icon {
     width: 14px;
     height: 14px;
     margin-left: 4px;
