--- a/PC/templates/czujnik.html
+++ b/PC/templates/czujnik.html
@@ -1,54 +1,37 @@
-<!DOCTYPE html>
-<html lang="pl">
-<head>
-    <title>Panel sterowania</title>
-    <link rel="stylesheet" type="text/css" href="../static/style.css" />
-    <meta charset="UTF-8">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
+{% extends "base.html" %}
+{% block content %}
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.2/socket.io.js" integrity="sha512-zoJXRvW2gC8Z0Xo3lBbao5+AS3g6YWr5ztKqaicua11xHo+AvE1b0lT9ODgrHTmNUxeCw0Ry4BGRYZfXu70weg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-</head>
-<body>
-    <div id="sidebar-left" class="sidebar">
-        <ul>
-            <a href="{{ url_for('index') }}"><li><img src="../static/icons/home.png" class="icons"/><span class="sidebar-text">Main</span></li></a>
-            <a href="{{ url_for('sterowanie') }}"><li><img src="../static/icons/robotic-arm.png" class="icons"/><span class="sidebar-text">Sterowanie</span></li></a>
-            <a href="{{ url_for('lokalizacja') }}"><li><img src="../static/icons/map.png" class="icons"/><span class="sidebar-text">Mapa i autonomia</span></li></a>
-            <a href="{{ url_for('czujnik') }}"><li><img src="../static/icons/search.png" class="icons"/><span class="sidebar-text">Czujniki</span></li></a>
-            <a href="{{ url_for('kamery') }}"><li><img src="../static/icons/video-camera.png" class="icons"/><span class="sidebar-text">Kamery</span></li></a>
-            <a href="{{ url_for('science') }}"><li><img src="../static/icons/atom.png" class="icons"/><span class="sidebar-text">Science</span></li></a>
-            <a href="{{ url_for('ustawienia') }}"><li><img src="../static/icons/settings.png" class="icons"/><span class="sidebar-text">Ustawienia</span></li></a>
-        </ul>
-    </div>
+    <head>
+        <title>Panel sterowania</title>
+        <link rel="stylesheet" type="text/css" href="../static/style.css" />
+        <meta charset="UTF-8">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
+    </head>
 
-    <div id="content">
-      <h1>czuniki</h1>
-    </div>
 
-    <div id="sidebar-right" class="sidebar">
-        <div class="sidebar-header">BATTERY 98% <br> CONNECTION <img src="../static/icons/delete.png" id="connection-icon"/></div>
-        <div id="info_element"></div>
-        <script>
-            const socket = io.connect('http://127.0.0.1:5000/');
+    <h1>czuniki</h1>
+
+    <script>
+        //przykladowe odbieranie danych od raspberry przez websockets:
+
+        const url = 'ws://192.168.8.125:8765'; // ADRES RASPBERRY
+        const ws = new WebSocket(url);
     
-            socket.on('message', (data) => {
-                console.log('Odebralem: ', data);
-                var info_element = document.getElementById('info_element');
-                const connection_icon = document.getElementById('connection-icon');
-                if (data == '1') {
-                    console.log("zmieniam obrazek");
-                    connection_icon.setAttribute("src", "../static/icons/yes.png");
-                }
-                info_element.innerHTML = data;
-            });
+        ws.addEventListener('open', () => {
+            console.log('polaczono z raspberry');
+        });
     
-            socket.emit('message', 'wiadomosc od przegladarki');
-            
+        ws.addEventListener('message', (event) => {
+            const dataArr = event.data.split(',').map(Number);
+            console.log('Odebrano dane:', dataArr);
+        });
     
-          </script>
-        <div class="sidebar-footer"><button class="off"><img src="../static/icons/power-on.png" class="off-image"/></button></div>
-    </div>
-</body>
-</html>
+        ws.addEventListener('close', () => {
+            console.log('odlaczono od raspberry');
+        });
+    </script>
+
+
+{% endblock %}
