--- a/PC/templates/index.html
+++ b/PC/templates/index.html
@@ -1,77 +1,34 @@
-<!DOCTYPE html>
-<html lang="pl">
-<head>
+{% extends "base.html" %}
+{% block content %}
+  <head>
     <title>Panel sterowania</title>
     <link rel="stylesheet" type="text/css" href="../static/style.css" />
     <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
-</head>
-<body>
-    <div id="sidebar-left" class="sidebar">
-      <ul>
-          <a href="{{ url_for('index') }}"><li><img src="../static/icons/home.png" class="icons"/><span class="sidebar-text">Main</span></li></a>
-          <a href="{{ url_for('sterowanie') }}"><li><img src="../static/icons/robotic-arm.png" class="icons"/><span class="sidebar-text">Sterowanie</span></li></a>
-          <a href="{{ url_for('lokalizacja') }}"><li><img src="../static/icons/map.png" class="icons"/><span class="sidebar-text">Mapa i autonomia</span></li></a>
-          <a href="{{ url_for('czujnik') }}"><li><img src="../static/icons/search.png" class="icons"/><span class="sidebar-text">Czujniki</span></li></a>
-          <a href="{{ url_for('kamery') }}"><li><img src="../static/icons/video-camera.png" class="icons"/><span class="sidebar-text">Kamery</span></li></a>
-          <a href="{{ url_for('science') }}"><li><img src="../static/icons/atom.png" class="icons"/><span class="sidebar-text">Science</span></li></a>
-          <a href="{{ url_for('ustawienia') }}"><li><img src="../static/icons/settings.png" class="icons"/><span class="sidebar-text">Ustawienia</span></li></a>
-      </ul>
-    </div>
+  </head>
+  <div id="content">
+    
+    <img id="image" src="" alt="Obraz z serwera">
+    <script>
+        //odczytywanie obrazu z serwera przez websocket żeby nie trzeba było odświeżać strony przy każdej zmianie obrazu
+        function loadDoc() {
+            var xhttp = new XMLHttpRequest();
+            xhttp.onreadystatechange = function() {
+              if (this.readyState == 4 && this.status == 200) {
+              document.getElementById("image").innerHTML = this.responseText;
+              }
+            };
+            xhttp.open("GET", "http://192.168.8.125/photos/obraz.jpg", true);
+            xhttp.send();
+          }
 
+        loadDoc()
 
-    <div id="content">
-      <img id="image" src="" alt="Obraz z serwera">
-      <script>
-          //odczytywanie obrazu z serwera przez websocket żeby nie trzeba było odświeżać strony przy każdej zmianie obrazu
-          function loadDoc() {
-              var xhttp = new XMLHttpRequest();
-              xhttp.onreadystatechange = function() {
-                if (this.readyState == 4 && this.status == 200) {
-                 document.getElementById("image").innerHTML = this.responseText;
-                }
-              };
-              xhttp.open("GET", "http://192.168.8.125/photos/obraz.jpg", true);
-              xhttp.send();
-            }
+    </script>
 
-          loadDoc()
-
-
-          //prostsza wersja która nie działa tak dobrze
-          /*
-          var imageUrl = "http://192.168.8.125/photos/obraz.jpg";  // adres URL obrazu na serwerze
-
-          // Pobieranie obrazu z serwera
-          var image = document.getElementById("image");
-          image.src = imageUrl;
-          */
-      </script>
-
-
-
-      <br/>
-      <h1 id="header"></h1>
-      <script type="text/javascript">
-        //odebranie danych które umieścił flask na stream i wyświetlenie w header
-        var source = new EventSource('/stream');
-        var header = document.getElementById('header');
-
-        source.onmessage = function(event) {
-          header.innerHTML = event.data;
-        };
-
-      </script>
-    </div>
-
-    <div id="sidebar-right" class="sidebar">
-      <div class="sidebar-header">BATTERY 98% <br> CONNECTION <img src="../static/icons/yes.png" class="connection-icon"/></div>
-      <div><a>komunikat</a></div>
-      <div class="sidebar-footer"><button class="off"><img src="../static/icons/power-on.png" class="off-image"/></button></div>
+    <h1>STRONA GŁÓWNA</h1>
   </div>
-</body>
-</html>
-
+{% endblock %}
 
