--- a/PC/templates/sterowanie.html
+++ b/PC/templates/sterowanie.html
@@ -1,61 +1,94 @@
-<!DOCTYPE html>
-<html lang="pl">
-<head>
-    <title>Panel sterowania</title>
-    <link rel="stylesheet" type="text/css" href="../static/style.css" />
-    <meta charset="UTF-8">
-    <script src="https://cdn.jsdelivr.net/npm/nipplejs@0.10.1/dist/nipplejs.min.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
-</head>
-<body>
-    <div id="sidebar-left" class="sidebar">
-        <ul>
-            <a href="{{ url_for('index') }}"><li><img src="../static/icons/home.png" class="icons"/><span class="sidebar-text">Main</span></li></a>
-            <a href="{{ url_for('sterowanie') }}"><li><img src="../static/icons/robotic-arm.png" class="icons"/><span class="sidebar-text">Sterowanie</span></li></a>
-            <a href="{{ url_for('lokalizacja') }}"><li><img src="../static/icons/map.png" class="icons"/><span class="sidebar-text">Mapa i autonomia</span></li></a>
-            <a href="{{ url_for('czujnik') }}"><li><img src="../static/icons/search.png" class="icons"/><span class="sidebar-text">Czujniki</span></li></a>
-            <a href="{{ url_for('kamery') }}"><li><img src="../static/icons/video-camera.png" class="icons"/><span class="sidebar-text">Kamery</span></li></a>
-            <a href="{{ url_for('science') }}"><li><img src="../static/icons/atom.png" class="icons"/><span class="sidebar-text">Science</span></li></a>
-            <a href="{{ url_for('ustawienia') }}"><li><img src="../static/icons/settings.png" class="icons"/><span class="sidebar-text">Ustawienia</span></li></a>
-        </ul>
-    </div>
+{% extends "base.html" %}
+{% block content %}
 
+    <head>
+        <title>Panel sterowania</title>
+        <link rel="stylesheet" type="text/css" href="../static/style.css" />
+        <meta charset="UTF-8">
+        <script src="https://cdn.jsdelivr.net/npm/nipplejs@0.10.1/dist/nipplejs.min.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
+    </head>
 
-    <div id="content">
-        <h1>Sterowanie</h1>
+    <div id="joystick-container">
         <div id="joystick"></div>
-        <script>
-            const options = {
-              zone: document.getElementById('joystick'),
-              mode: 'static',
-              position: { left: '50%', top: '50%' },
-              color: 'blue',
-              size: 150
-            };
-          
-            const joystickManager = nipplejs.create(options);
-          
-            //kod do zbierania danych z joysticka
-            
-            /*
-            joystickManager.on('move', (evt, nipple) => {
-                let deltaX = nipple.frontPosition.x - options.position.left;
-                let deltaY = nipple.frontPosition.y - options.position.top;
-          
-                console.log('Delta X:', deltaX, 'Delta Y:', deltaY);
-            });
-            */
-           
-          </script>
     </div>
+    <script>
 
-    <div id="sidebar-right" class="sidebar">
-        <div class="sidebar-header">BATTERY 98% <br> CONNECTION <img src="../static/icons/yes.png" class="connection-icon"/></div>
-        <div><a>komunikat</a></div>
-        <div class="sidebar-footer"><button class="off"><img src="../static/icons/power-on.png" class="off-image"/></button></div>
-    </div>
-</body>
-</html>
+        const place = document.getElementById('joystick-container');
+        const options = {
+            zone: place,
+            mode: 'static',
+            position: { left: '50%', top: '50%' },
+            color: 'blue',
+            size: 150
+        };
+    
+        const joystick = nipplejs.create(options);
+    
+
+        joystick.on('move', (event, data) => {
+            const angleRadians = data.angle.radian;
+            const angleDegrees = ((angleRadians * 180) / Math.PI).toFixed();
+            let force = data.force;
+
+            //ALGORYTM DO ZAMIANY DANYCH Z JOYSTICKA NA MOC SILNIKOW W ŁAZIKU (TE DANE MOGĄ ZOSTAĆ JUŻ PRZESŁANE DO RASPBERRY A POTEM DO ARDUINO)
+            var prawy = 100; 
+            var lewy = 100;
+
+            //skret w prawo
+            if (angleDegrees <= 15 || angleDegrees >= 345) {
+                prawy = -100;
+                lewy = 100;
+            } 
+            //skret w lewo
+            else if (angleDegrees <= 195 && angleDegrees >= 165) {   
+                prawo = 100;
+                lewy = -100;
+            } 
+            //jazda do przodu
+            else if (angleDegrees >= 15 && angleDegrees <= 165) {
+                roznica = 90 - angleDegrees;
+                if (roznica < 0) {
+                    //lewo
+                    lewy = lewy + (roznica * 100) / 75;
+                } else {
+                    //prawo
+                    prawy = prawy - (roznica * 100) / 75;
+                }
+            } 
+            //jazda do tylu
+            else {
+                roznica = 270 - angleDegrees;
+                if (roznica > 0){
+                    //lewo
+                    lewy = lewy - (roznica * 100) / 75;
+                    lewy = lewy * -1;
+                    prawy = prawy * -1;
+                } else {
+                    //prawo
+                    prawy = prawy + (roznica * 100) / 75;
+                    lewy = lewy * -1;
+                    prawy = prawy * -1;
+                }
+            }
+
+            if (force > 2) {
+                force = 2;
+            }
+
+            console.log(" lewy: ", (lewy * force / 2).toFixed(0), "prawy: ", (prawy * force / 2).toFixed(0),);
+        });
+
+
+
+        joystick.on('end', () => {
+            console.log('Joystick Released');
+        });
+    
+    </script>
+
+
+{% endblock %}
