--- a/PC/templates/index.html
+++ b/PC/templates/index.html
@@ -13,6 +13,7 @@
     <img id="image" src="" alt="Obraz z serwera">
     <script>
         //odczytywanie obrazu z serwera przez websocket żeby nie trzeba było odświeżać strony przy każdej zmianie obrazu
+        //TU MA BYC ODBIERANIE DANYCH Z KAMER OD WEBRCT
         function loadDoc() {
             var xhttp = new XMLHttpRequest();
             xhttp.onreadystatechange = function() {
