--- a/raspberry/templates/sterowanie.html
+++ b/raspberry/templates/sterowanie.html
@@ -31,8 +31,8 @@
         
         <div id="Manipulator" class="tabcontent">
             <div style="top: 0; position: fixed; left: 50%; transform: translateX(-50%); margin-top: 10%;">
-                <button id="leftCrush" class="crush-button"><img src="../static/icons/minimise.png" class="crush-icons" loading="lazy"/></button>
-                <button id="rightCrush" class="crush-button"><img src="../static/icons/maximize.png" class="crush-icons" loading="lazy"/></button>
+                <button id="leftCrush" class="crush-button"><img src="../static/icons/minimise.png" class="crush-icons" loading="eager"/></button>
+                <button id="rightCrush" class="crush-button"><img src="../static/icons/maximize.png" class="crush-icons" loading="eager"/></button>
             </div>
 
             <div id="joystick-manipulator-A-container">
@@ -44,9 +44,11 @@
             </div>
 
             <div style="bottom: 0; position: fixed; left: 50%; transform: translateX(-50%); margin-bottom: 10%;">
-                <button id="leftBtn" class="gripper-button"><img src="../static/icons/back.png" class="arrow-icons" loading="lazy"/></button>
-                <button id="rightBtn" class="gripper-button"><img src="../static/icons/next.png" class="arrow-icons" loading="lazy"/></button>
+                <button id="leftBtn" class="gripper-button"><img src="../static/icons/back.png" class="arrow-icons" loading="eager"/></button>
+                <button id="rightBtn" class="gripper-button"><img src="../static/icons/next.png" class="arrow-icons" loading="eager"/></button>
             </div>
+
+            <button id="homeManipButton"><img src="../static/icons/home-manip.png" class="arrow-icons" loading="eager"/></button>   
         </div>
         <h3 style="bottom: 0; position: fixed; left: 50%; transform: translateX(-50%);">Jeżeli występuje bład w działaniu joysticków naciśni 2 razy F12</h3>
     </div>
